--- a/index.html
+++ b/index.html
@@ -5,18 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <style>
+        body{
+            display: flex;
+            background-color: rgb(33, 32, 32);
+            width: 100%;
+            height: 100%;
+        }
+        .conteiner{            
+            margin: 0 auto;
+        }
         .title{
             margin-bottom: 10px;
             text-align: center;
-            width: 173px;
-            color: blue;
+            width: 15vw;
+            color: rgb(255, 255, 255);
+            font-size: 20px;
+            background-color: green;
+            border-radius: 10px;
             border: solid black 2px;
         }
         input[type="button"]{
-            background-color: black;
+            background-color: green;
             color: white;
             border: solid black 2px;
             width: 100%;
+            border-radius: 10px;
         }
         input[type="text"]{
             background-color: white;
@@ -28,37 +41,39 @@
     </style>
 </head>
 <body>
-    <div class="title">Calculator</div>
-    <table border="0">
-        <tr>
-            <td colspan="3"><input type="text" id="result"></td>
-            <td><input type="button" value="c" onclick="clr()"></td>
-        </tr>
-        <tr>
-            <td><input type="button" value="1" onclick="display('1')"></td>
-            <td><input type="button" value="2" onclick="display('2')"></td>
-            <td><input type="button" value="3" onclick="display('3')"></td>
-            <td><input type="button" value="/" onclick="display('/')"></td>
-        </tr>
-        <tr>
-            <td><input type="button" value="4" onclick="display('4')"></td>
-            <td><input type="button" value="5" onclick="display('5')"></td>
-            <td><input type="button" value="6" onclick="display('6')"></td>
-            <td><input type="button" value="-" onclick="display('-')"></td>
-        </tr>
-        <tr>
-            <td><input type="button" value="7" onclick="display('7')"></td>
-            <td><input type="button" value="8" onclick="display('8')"></td>
-            <td><input type="button" value="9" onclick="display('9')"></td>
-            <td><input type="button" value="+" onclick="display('+')"></td>
-        </tr>
-        <tr>
-            <td><input type="button" value="." onclick="display('.')"></td>
-            <td><input type="button" value="0" onclick="display('0')"></td>
-            <td><input type="button" value="=" onclick="equate()"></td>
-            <td><input type="button" value="*" onclick="display('*')"></td>
-        </tr>
-    </table>
+    <div class="conteiner">
+        <div class="title">Calculator</div>
+        <table border="0">
+            <tr>
+                <td colspan="3"><input type="text" id="result"></td>
+                <td><input type="button" value="c" onclick="clr()"></td>
+            </tr>
+            <tr>
+                <td><input type="button" value="1" onclick="display('1')"></td>
+                <td><input type="button" value="2" onclick="display('2')"></td>
+                <td><input type="button" value="3" onclick="display('3')"></td>
+                <td><input type="button" value="/" onclick="display('/')"></td>
+            </tr>
+            <tr>
+                <td><input type="button" value="4" onclick="display('4')"></td>
+                <td><input type="button" value="5" onclick="display('5')"></td>
+                <td><input type="button" value="6" onclick="display('6')"></td>
+                <td><input type="button" value="-" onclick="display('-')"></td>
+            </tr>
+            <tr>
+                <td><input type="button" value="7" onclick="display('7')"></td>
+                <td><input type="button" value="8" onclick="display('8')"></td>
+                <td><input type="button" value="9" onclick="display('9')"></td>
+                <td><input type="button" value="+" onclick="display('+')"></td>
+            </tr>
+            <tr>
+                <td><input type="button" value="." onclick="display('.')"></td>
+                <td><input type="button" value="0" onclick="display('0')"></td>
+                <td><input type="button" value="=" onclick="equate()"></td>
+                <td><input type="button" value="*" onclick="display('*')"></td>
+            </tr>
+        </table>
+    </div>
     <script text="text/javascript">
         function clr(){
             document.getElementById("result").value = "";
