--- a/index.html
+++ b/index.html
@@ -7,46 +7,52 @@
     <style>
         body{
             display: flex;
-            background-color: rgb(33, 32, 32);
+            background: #EAEBEC;  
             width: 100%;
             height: 100%;
         }
-        .conteiner{            
-            margin: 0 auto;
-        }
-        .title{
-            margin-bottom: 10px;
-            text-align: center;
-            width: 15vw;
-            color: rgb(255, 255, 255);
-            font-size: 20px;
-            background-color: green;
-            border-radius: 10px;
-            border: solid black 2px;
+        .conteiner{   
+            background: #3A4655;
+
+            width: 275px;
+            margin: auto;
+            min-height: 400px;
+            border: solid 1px #3A4655;
+            box-shadow: 0 8px 50px -7px black;
         }
         input[type="button"]{
-            background-color: green;
-            color: white;
-            border: solid black 2px;
-            width: 100%;
-            border-radius: 10px;
+            width: 64px;
+            background: #425062;
+            color: #fff;
+            padding: 22px;
+            display: inline-block;
+            font-size: 25px;
+            text-align: center;
+            vertical-align: middle;
+            border-right: solid 2px #3C4857;
+            border-bottom: solid 2px #3C4857;
+            transition: all 0.2s ease-in-out;
         }
         input[type="text"]{
-            background-color: white;
+            background: #3A4655;
             width: 100%;
-            border: solid black 2px;
+            height: 50px;
+            padding: 20px;
+            color: #fff;
+            font-size: 20px;
 
         }
-
+        .ctrl{
+            background: #930f2a;
+        }
     </style>
 </head>
 <body>
     <div class="conteiner">
-        <div class="title">Calculator</div>
         <table border="0">
             <tr>
                 <td colspan="3"><input type="text" id="result"></td>
-                <td><input type="button" value="c" onclick="clr()"></td>
+                <td class="ctrl"><input type="button" value="c" onclick="clr()"></td>
             </tr>
             <tr>
                 <td><input type="button" value="1" onclick="display('1')"></td>
